Moved Firebase to shared repo, added angles page in contest mode

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "advanced"]
 	path = advanced
 	url = git@github.com:NessDan/keyboard-configure-simple.git
+[submodule "js/shared"]
+	path = js/shared
+	url = git@github.com:NessDan/keyboard-shared.git
+[submodule "angles"]
+	path = angles
+	url = git@github.com:NessDan/keyboard-angle-demo.git
